fix mismatched background color above homepage footer after switching dark mode in blog

--- a/stylesheets/Home.module.sass
+++ b/stylesheets/Home.module.sass
@@ -1,13 +1,10 @@
 @import "../utils/widthPicker"
 @import "../utils/colorPalette"
 
-.footerBackground
-  background: $space-grey
+.footerSpacingBackground
+  background: $off-white
 
 .footerPadding
-  padding: 25px 0
-
-.marginTop
-  margin: 45px 0 0 0
+  padding: 45px 0 0 0
   +screen(lessThanMedium)
-    margin: 25px 0 0 0
+    padding: 25px 0 0 0
