--- a/stylesheets/components/Footer/Footer.module.sass
+++ b/stylesheets/components/Footer/Footer.module.sass
@@ -4,11 +4,10 @@
 @import "../../../utils/colorPalette"
 
 .footerStyle
-  padding-left: 0
-  padding-right: 0
-  padding-top: 10px
+  padding: 35px 0 25px 0
+  background: $space-grey
   +screen(small)
-    padding-top: 0
+    padding-top: 25px
 
 .footerDarkText
   color: $light-grey
